SDI-71: 📝 More spring docs configuration